# C

./: .gitignore  Main.ipynb  Readme.md
APPS/: CMakeLists.txt
APPS/PI/: pi.cpp
APPS/SAXPY/: CMakeLists.txt  main.c  saxpy.c  utils.c
APPS/SIEVE/: main.c
APPS/Sorting/: main.cpp
APPS/UTILS/: CMakeLists.txt
APPS/UTILS/include/: io_helper.h  omp_helper.h  omp_helper.hh  rand_init.hh  timing.h
APPS/UTILS/src/: random_init.c  timing.c
APPS/VEC_ADD/: main.c
APPS/histogram/: Alfa.txt  CMakeLists.txt  UTILS  main.cpp
APPS/omp_examples/: reduction_example.cpp
C_APPS/: CMakeLists.txt  Makefile  main_exp.c  main_odd_even.c  main_saxpy.c  main_vec_add.c
C_APPS/EXP/: CMakeLists.txt  main_exp.c  my_exp.h
C_APPS/ODD_EVEN/: CMakeLists.txt
C_APPS/PI/: main_pi.c  pi.mk
C_APPS/SAXPY/: CMakeLists.txt  definitions.h  main_saxpy.c  saxpy.mk
C_APPS/SIEVE/: CMakeLists.txt  main_sieve.c  sieve.mk
C_APPS/UTILS/: main_std_boilerplate.cpp
C_APPS/UTILS/include/: io_helper.h  omp_helper.h  random_init.h  timing.h
C_APPS/UTILS/src/: io_helper.c
C_APPS/VEC_ADD/: CMakeLists.txt  main_vec_add.c  vec_add.mk  vec_add_alg.h  vec_add_iter.c  vec_add_rec.c
C_PLUSPLUS_APPS/Sorting/: sorting.cpp  sorting.hh
C_PLUSPLUS_APPS/UTILS/include/: omp_helper.hh  random_init.h
C_PLUSPLUS_APPS/UTILS/src/: rand_init.cpp
C_PLUSPLUS_APPS/omp_examples/: main.cpp
DOCUMENTATION/: MPI.md  OpenMP.md
RUNNERS/: configure_build.sh  run_strong_scale.sh  run_weak_scale.sh
UTILS/include/: rand_init.hh
UTILS/src/: rand_init.cpp
snippets/: HOF.hh  main.cpp
snippets/OMP/: Makefile  main_hw.cpp  main_nested.cpp  main_teams.cpp  openmp.sh
